--- a/typescript/node/tsconfig.json
+++ b/typescript/node/tsconfig.json
@@ -1,37 +1,29 @@
 {
   "compilerOptions": {
-    "allowJs": false,
-    "allowSyntheticDefaultImports": true,
     "declaration": true,
     "diagnostics": true,
-    "downlevelIteration": true,
-    "emitDecoratorMetadata": true,
-    "esModuleInterop": true,
-    "experimentalDecorators": true,
-    "forceConsistentCasingInFileNames": true,
-    "inlineSources": true,
+    "jsx": "react-jsx",
     "lib": [
-      "ESNext"
+      "DOM",
+      "ESNext",
+      "WebWorker"
     ],
-    "module": "ESNext",
-    "moduleResolution": "Node",
+    "module": "NodeNext",
+    "moduleResolution": "NodeNext",
     "noImplicitAny": true,
-    "outDir": "./build",
-    "pretty": true,
-    "removeComments": false,
-    "resolveJsonModule": true,
+    "outDir": "build",
     "skipLibCheck": true,
     "sourceMap": true,
-    "sourceRoot": "/",
     "strict": true,
     "strictNullChecks": true,
-    "target": "ESNext"
+    "target": "ESNext",
+    "types": [
+      "node"
+    ]
   },
   "exclude": [
-    "node_modules",
     "build",
-    "**/*.spec.ts",
-    "**/*.test.ts"
+    "node_modules"
   ],
   "include": [
     "src/**/*.ts"
